php-src/ext/spl/tests/bug77431.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught TypeError: SplFileInfo::__construct() expects parameter 1 to be a valid path, string given in /root/php-src/ext/spl/tests/bug77431.php:2
Stack trace:
#0 /root/php-src/ext/spl/tests/bug77431.php(2): SplFileInfo->__construct('bad\x00good')
#1 {main}
  thrown in /root/php-src/ext/spl/tests/bug77431.php on line 2