php-src/ext/spl/tests/bug77431.php
<?php
new SplFileInfo("bad\0good");
?>
